# gbtrace

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build-web.sh
.github/workflows/: build.yml  deploy.yml  traces.yml
adapters/bgb/: .gitignore  Makefile  README.md  gbtrace-bgb.c
adapters/docboy/: Makefile  docboy-trace-api.patch  gbtrace-docboy.cpp
adapters/gambatte/: Makefile  README.md  gbtrace-gambatte.cpp
adapters/gateboy/: .gitignore  Makefile  audio_stub.cpp  gbtrace-gateboy.cpp
adapters/logicboy/: Makefile  gbtrace-logicboy.cpp
adapters/mgba/: Makefile  README.md  gbtrace-mgba.c
adapters/missingno/: .gitignore  Cargo.toml  Makefile
adapters/sameboy/: Makefile  README.md  gbtrace-sameboy.cpp
crates/gbtrace/: Cargo.toml
crates/gbtrace-cli/: Cargo.toml
crates/gbtrace-cli/src/: main.rs
crates/gbtrace-ffi/: Cargo.toml  gbtrace.h
crates/gbtrace-wasm/: Cargo.toml
crates/gbtrace-wasm/src/: lib.rs
crates/gbtrace/examples/: verify_trace.rs
crates/gbtrace/src/: column_store.rs  comparison.rs  diff.rs  diff_store.rs  downsample.rs  entry.rs  error.rs  framebuffer.rs  header.rs  lib.rs  main.rs  parquet.rs  partitioned_store.rs  profile.rs  query.rs  reader.rs  snapshot.rs  store.rs  vram.rs  writer.rs
crates/gbtrace/src/format/: convert.rs  mod.rs  read.rs  write.rs
crates/gbtrace/tests/: format_roundtrip.rs  integration.rs
docs/: index.html
docs/pkg/: gbtrace_wasm.js
docs/src/lib/: format.js  (+1 more)
profiles/: blargg_cpu.toml  cpu_basic.toml  ppu_timing.toml  timer_edge.toml
scripts/: check-gambatte-hex.py  devserver.py  gen-rules.py  manifest.py  png-to-pix.py  run-blargg-tests.sh  run-gbmicrotest.sh  serve.sh  trace-age.sh  trace-blargg.sh  trace-dmg-sound.sh  trace-gambatte-tests.sh  trace-gbmicrotest.sh  trace-mealybug-tearoom.sh  trace-mooneye-wilbertpol.sh  trace-mooneye.sh  trace-samesuite.sh  trace-screenshot-suite.sh  trace-screenshot.sh
test-suites/age/: profile.toml
test-suites/blargg/: blargg-ppu.toml  blargg.toml  instr_timing_gambatte_pass.gbtrace.parquet  instr_timing_mgba_pass.gbtrace.parquet  instr_timing_sameboy_pass.gbtrace.parquet  manifest.json  profile.toml
test-suites/bully/: profile.toml
test-suites/dmg-acid2/: dmg-acid2-tcycle.toml  dmg-acid2.toml  profile.toml
test-suites/gambatte/: profile.toml
test-suites/gbmicrotest/: div_inc_timing_a_gateboy_pass.gbtrace.parquet  div_inc_timing_a_mgba_pass.gbtrace.parquet  div_inc_timing_b_gateboy_pass.gbtrace.parquet  dma_0x1000_gambatte_pass.gbtrace.parquet  dma_0x1000_mgba_pass.gbtrace.parquet  (+768 more)
web/: index.html
(+3618 files in other folders)
