[package]
name = "gbtrace-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for inspecting and comparing GB Trace files"

[[bin]]
name = "gbtrace-cli"
path = "src/main.rs"

[dependencies]
gbtrace = { path = "../gbtrace", features = ["parquet"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
