[package]
name = "gbtrace-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the gbtrace trace viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gbtrace = { path = "../gbtrace", features = ["parquet"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
