[package]
name = "gbtrace"
version = "0.1.0"
edition = "2021"
description = "Reader, writer, and profile parser for the GB Trace emulator comparison format"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
