[package]
name = "gbtrace"
version = "0.1.0"
edition = "2021"
description = "Reader, writer, and profile parser for the GB Trace emulator comparison format"

[features]
default = []
parquet = ["dep:arrow", "dep:bytes", "dep:parquet"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
sha2 = "0.10"
thiserror = "2"
arrow = { version = "54", optional = true, default-features = false }
bytes = { version = "1", optional = true }
parquet = { version = "54", optional = true, features = ["zstd"] }

[dev-dependencies]
tempfile = "3"
